Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6231

s60 application loses normalGeometry when returning from fullscreen

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.2
    • 4.6.0
    • None
    • None
    • fd12fbcf332878ab6a5b6ef8f09804b8598faced,79fb890a4f2a13cc0f21e92f5b2a6e10af1430b4

    Description

      Problem description: normalGeomerty lost during showFullScreen
      Steps:
      1. Launch ShowModeBug
      2. Click button 3 times
      -> widget is drawn over statusbar and original size is lost.

      Attachments

        1. bug.png
          bug.png
          141 kB
        2. ShowModeBug.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jhautaka Jani Hautakangas
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes