s60 application loses normalGeometry when returning from fullscreen

Problem description: normalGeomerty lost during showFullScreen

1. Reported problen was due on void QSymbianControl::PositionChanged()
over write top->normaGeometry on every position change. As fix
top->normalGeometry is moved to new rect:s top left only when
widget windowState == 0.

2. Also made some new qwidget auto tests. Refactored s60 side
setWindowState to be more readable. Minimized window state now
hides window decoration.

QApplication & QWidget autotest run on emulator and tested on
s60 5.0 hw using attached application.

http://bugreports.qt.nokia.com/browse/QTBUG-6231

Task-number:QTBUG-6231

Merge-request: 2256
Reviewed-by: Jani Hautakangas <ext-jani.hautakangas@nokia.com>
(cherry picked from commit 79fb890a4f2a13cc0f21e92f5b2a6e10af1430b4)